Fix video recording tests and refactor state management
- Fix egress recording failures by waiting for active status
- Add MinIO S3 recording support with comprehensive test coverage
- Refactor EgressStateManager to use dependency injection pattern
- Extract shared egress utilities to reduce code duplication
- Remove IDE files and update gitignore